Issue #15766: Fix a crash in imp.load_dynamic() on PyUnicode_FromString() failure