Python/dynload_shlib.c
@@ -139,9 +139,9 @@ dl_funcptr _PyImport_GetDynLoadFunc(const char *shortname,
         path = PyUnicode_FromString(pathname);
         mod_name = PyUnicode_FromString(shortname);
         PyErr_SetImportError(error_ob, mod_name, path);
-        Py_DECREF(error_ob);
-        Py_DECREF(path);
-        Py_DECREF(mod_name);
+        Py_XDECREF(error_ob);
+        Py_XDECREF(path);
+        Py_XDECREF(mod_name);
         return NULL;
     }
     if (fp != NULL && nhandles < 128)
